--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.8",
     "react-scripts": "3.4.0",
     "react-scroll-parallax": "^2.3.1",
     "styled-components": "^5.0.1"
